fix alignment in multipart questions

--- a/styles/output/webview-generic.css
+++ b/styles/output/webview-generic.css
@@ -1688,7 +1688,8 @@ a:hover {
 }
 
 [data-type=injected-exercise] [data-type=alphabetical-question-multipart] > .os-problem-container > .os-divider {
-  margin-right: 0.5em;
+  display: table-cell;
+  width: 0.5em;
 }
 
 [data-type=injected-exercise] [data-type=alphabetical-question-multipart] > .os-problem-container > [data-type=question-stem] {
